Sun Nov  4 20:29:31 2001  Owen Taylor  <otaylor@redhat.com>

	* glib/gdir.[ch]: Indentation fixes, some rewriting of docs to
	conform to gtk-doc standard.

	* glib/gdir.[ch] (g_dir_close): Remove the boolean 
	return value. What would you do if closing failed?
	What would the user do if you printed a warning
	message "closing directory %d failed"?

2001-11-04  Hans Breuer  <hans@breuer.org>

	* glib/gdir.[hc] : (new files) simplified wrapper around dirent 
	functions to improve portability of downstream libs/apps
	* glib/makefile.msc.in : use them
	* glib/glib.def : export them
	* config.h.win32.in : needing HAVE_DIRENT_H defined

2001-11-04  Tor Lillqvist  <tml@iki.fi>

	* tests/Makefile.am: On Win32, create separate .exp file for
	module-test.o and link with that. Otherwise the GNU linker doesn't
	export the g_clash_func.

2001-11-03  Hans Breuer  <hans@breuer.org>

	* glib/giowin32.c : static correctness

	* glib/gwin32.c : some more #if defined (SUBLANG_* ...
	(g_win32_get_package_installation_subdirectory) use g_build_filename
	instead of duplicating its logic

	* glib/glib.def : removed duplicates, added mising, removed
	compat cruft

Fri Nov  2 19:54:16 2001  Tim Janik  <timj@gtk.org>

	* glib/gbacktrace.h (G_BREAKPOINT): remove public signal.h include.

Thu Nov  1 21:48:43 2001  Owen Taylor  <otaylor@redhat.com>

	* tests/mainloop-test.c (recurser_idle): Recurse
	with may_block = FALSE, so we don't get into
	the pathology where the recurser_idle recurses
	for 10 iterations, and the only thing that is
	running is the recurser idle, which adds
	another recursion for each of those 10 iterations
	and....

	* tests/mainloop-test.c (create_crawler): Fix race
	condition where a crawler source could be destroyed
	before it was added to the crawler array.

	* test/Makefile.am: Add mainloop-test back.
	
2001-11-01  Marius Andreiana  <mandreiana@yahoo.com>

	* configure.in: Added ro (Romanian) to ALL_LINGUAS

2001-10-31  Havoc Pennington  <hp@redhat.com>
