@@ -513,7 +513,7 @@ AC_MSG_RESULT($g_have_gnuc_varargs)
 AC_C_BIGENDIAN
 
 # check for header files
-AC_CHECK_HEADERS([float.h limits.h pwd.h sys/param.h sys/poll.h sys/select.h])
+AC_CHECK_HEADERS([dirent.h float.h limits.h pwd.h sys/param.h sys/poll.h sys/select.h])
 AC_CHECK_HEADERS([sys/time.h sys/times.h unistd.h values.h stdint.h sched.h])
 
 # Checks for libcharset
